--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>status</title>
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <h2>Status Page</h2>
-  <div id='data'></div>
+  <h2><span id='main-status'>● </span>Status Page</h2>
+
+  <p>nginx: <span id='n-result'></span></p>
+  <div id='nginx'></div>
+  <hr>
+
+  <p>mysql: <span id='m-result'></span></p>
+  <div id='mysql'></div>
+  <hr>  
+
+  <p>pm2: <span id='p-result'></span></p>
+  <div id='pm2'></div>
   <script src='main.js'></script>
 </body>
 </html>
